# telegram-ro-bot

./: .env-example  .gitignore  LICENSE  conda_env.yml  pdm.toml  pyproject.toml
config/: bot_example.json  gcloud_example.json
src/vladpy_telegram_ro_bot/: __init__.py  __main__.py  _application.py  _bot.py  _gcloud_client_defaults.py  _initiate_logs.py  _message.py  _translator.py  _types.py
src/vladpy_telegram_ro_bot/_application/: _application.py  _bot.py  _initiate_logs.py
src/vladpy_telegram_ro_bot/_application/_config/: _bot_config.py
src/vladpy_telegram_ro_bot/_application/_defaults/: _application_defaults.py  _gcloud_api_defaults.py
src/vladpy_telegram_ro_bot/_application/_text_invariant/: _command.py  _reply.py
src/vladpy_telegram_ro_bot/_application/_translator/: _message_sentences_extractor.py  _translate_result.py  _translator.py  _translator_utils.py
src/vladpy_telegram_ro_bot/_config/: _bot_config.py  _telegram_config.py
src/vladpy_telegram_ro_bot/_constants/: _answer.py  _command.py
src/vladpy_telegram_ro_bot/constants/: _answer.py  _command.py
telegram-ro-bot/: _application.py  _bot.py  _initiate_logs.py  main.py
tests/vladpy_telegram_ro_bot/_application/_translator/: _message_sentences_extractor_plain_text_test.py  _translator_utils_detect_language_test.py
